# MADICAL_RAG_PRODUCTION_SYSTEM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eval_results.json  init_supabase.py  langfuse_help.txt  render.yaml  requirements-eval.txt  requirements.txt  test_all.py  test_all_components.py  test_chat.py  test_final.py  test_langfuse_v4.py  test_llm.py  test_rag.py
backend/.github/workflows/: keepalive.yml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  documents.py  health.py  (+1 more)
backend/app/core/: logging.py  security.py
backend/app/db/: supabase_schema.sql
backend/app/models/: schemas.py
backend/app/services/: cache.py  chunking.py  embeddings.py  graph.py  guardrails.py  keyword_search.py  llm.py  memory.py  observability.py  query_rewrite.py  rate_limit.py  reranker.py  retrieval.py  supabase_client.py  vector_store.py
backend/scripts/: eval_retrieval_metrics.py  evaluate_ragas.py  ingest_documents.py
frontend/: README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Card.jsx  ChatBubble.jsx  Loader.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  History.jsx  Landing.jsx  Login.jsx  Profile.jsx
frontend/src/services/: api.js  auth.js
plans/: frontend-plan.md  implementation-plan.md
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260624144632_create_profiles.sql
