[project]
name = "madical-rag-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "google-generativeai>=0.8.6",
    "groq>=0.37.1",
    "guardrails-ai>=0.1.8",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.9.1",
    "langgraph>=1.2.6",
    "litellm>=1.89.3",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "ragas>=0.3.1",
    "rank-bm25>=0.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "langchain-huggingface>=0.2.0",
    "slowapi>=0.1.10",
    "supabase>=2.31.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.49.0",
]
